--- a/javascript/04/index.html
+++ b/javascript/04/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/main.css" />
     <title>Document</title>
-    <div class="foo">テスト</div>
-    <div class="foo" id="bar">テスト</div>
+    <!-- <div class="foo">テスト</div>
+    <div class="foo" id="bar">テスト</div> -->
+    <button class="foo" id="bar">アラート！</button>
   </head>
   <body>
     <script src="./javascript/main.js"></script>
