ボタン押下のイベントを準備

--- a/javascript/実践課題/index.html
+++ b/javascript/実践課題/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/main.css" />
     <title>Document</title>
-    <div class="count-figure">0</div>
+    <div class="count-figure"></div>
     <button class="count-down">-</button>
     <button class="count-up">+</button>
   </head>
