メソッドの呼び出し方法

--- a/Vue_tutorial/01/index.html
+++ b/Vue_tutorial/01/index.html
@@ -27,6 +27,11 @@
       </ol>
     </div>
 
+    <div id="app-5">
+      <p>{{ message }}</p>
+      <button v-on:click="reverseMessage">メッセージが反転するよ</button>
+      <button v-on:click="alertClick">押すとアラートが出るよ</button>
+    </div>
     <script src="./javascript/main.js"></script>
   </body>
 </html>
