双方向バインディング

--- a/Vue_tutorial/01/index.html
+++ b/Vue_tutorial/01/index.html
@@ -32,6 +32,11 @@
       <button v-on:click="reverseMessage">メッセージが反転するよ</button>
       <button v-on:click="alertClick">押すとアラートが出るよ</button>
     </div>
+
+    <div id="app-6">
+      <p>{{ message }}</p>
+      <input v-model="message" />
+    </div>
     <script src="./javascript/main.js"></script>
   </body>
 </html>
