doAdd メソッドを作成。ウォッチャ機能を実装

--- a/Vue_tutorial/todoアプリ/index.html
+++ b/Vue_tutorial/todoアプリ/index.html
@@ -9,26 +9,33 @@
   </head>
   <body>
     <div id="app">
-      <thead>
-        <tr>
-          <th class="id">ID</th>
-          <th class="comment">コメント</th>
-          <th class="state">状態</th>
-          <th class="button">-</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr v-for="item in todos" v-bind:key="item.id">
-          <th>{{ item.id }}</th>
-          <td>{{ item.comment }}</td>
-          <td class="state">
-            <button>{{ item.state }}</button>
-          </td>
-          <td class="button">
-            <button>削除</button>
-          </td>
-        </tr>
-      </tbody>
+      <table>
+        <thead>
+          <tr>
+            <th class="id">ID</th>
+            <th class="comment">コメント</th>
+            <th class="state">状態</th>
+            <th class="button">-</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-for="item in todos" v-bind:key="item.id">
+            <th>{{ item.id }}</th>
+            <td>{{ item.comment }}</td>
+            <td class="state">
+              <button>{{ item.state }}</button>
+            </td>
+            <td class="button">
+              <button>削除</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <h2>新しい作業の追加</h2>
+      <form class="add-form" v-on:submit.prevent="doAdd">
+        コメント <input type="text" ref="comment" />
+        <button type="submit">追加</button>
+      </form>
     </div>
     <script src="./javascript/main.js"></script>
   </body>
